<resources>
    <string name="app_name">Shoe Store</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="get_started">Get Started</string>
    <string name="shoes_image">Shoes Image</string>
    <string name="welcome_header">Follow latest \n style shoes</string>
    <string name="welcome_description">There are many beautiful and attractive\nornamental plants to decorate your room</string>
    <string name="welcome">Welcome</string>
    <string name="instruction_description">Explore many products\nChoose and checkout\nGet it delivered</string>
    <string name="instruction_header">online store</string>
    <string name="finish">Finish</string>
    <string name="fab_content_desc">add shoe</string>
    <string name="logout">Logout</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_shoe">Add New Shoe</string>
</resources>