<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="dev.marawanxmamdouh.shoestore.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="dev.marawanxmamdouh.shoestore.ui.welcome.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="dev.marawanxmamdouh.shoestore.ui.instructions.InstructionsFragment"
        android:label="fragment_instructions"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeList"
            app:destination="@id/shoeList"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeList"
        android:name="dev.marawanxmamdouh.shoestore.ui.shoelist.ShoeList"
        android:label="fragment_shoe_list"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoeList_to_shoeDetail"
            app:destination="@id/shoeDetail" />
        <argument android:name="shoeName"
            app:argType="string" />
        <argument android:name="company"
            app:argType="string" />
        <argument android:name="size"
            app:argType="string" />
        <argument android:name="description"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetail"
        android:name="dev.marawanxmamdouh.shoestore.ui.shoedetail.ShoeDetail"
        android:label="@string/add_new_shoe"
        tools:layout="@layout/fragment_shoe_detail">
        <action
            android:id="@+id/action_shoeDetail_to_shoeList"
            app:destination="@id/shoeList"
            app:popUpTo="@id/shoeList"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>